@@ -1,3 +1,8 @@
+2006-08-31  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlcomposition.c: (gnl_composition_add_object):
+	Set all properties of default sources in one g_object_set().
+
 2006-08-30  Edward Hervey  <edward@fluendo.com>
 
 	* gnl/gnlcomposition.c:
